# string-similarity

./: .gitignore  README.md  pyproject.toml  string_similarity.py  test_string_similarity.py
tests/: test_string_similarity.py
