[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "string_similarity_lakshay_angrish"
version = "0.0.2"
authors = [
  { name="Lakshay Angrish", email="lakshay.angrish@hotmail.com" },
]
description = "Library to check similarity between strings"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lakshay-angrish/string-similarity"
"Bug Tracker" = "https://github.com/lakshay-angrish/string-similarity/issues"
